# opengeobot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  debug-qwenpaw-422-verify.md  debug-qwenpaw-init-chain.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pom.xml  requirements.txt
.github/workflows/: ci.yml
.trae/documents/: fix-menu-navigation.md  fix-minio-and-memory-perms.md  fix-page-errors.md
.trae/rules/: project_rules.md
app/: __init__.py  engines.py  engines_deepseek.py  experiment_manager.py  experiment_models.py  feature_flags.py  foundation.py  main.py  models.py  pagination.py  parser.py  phase3_models.py  reference_manager.py  reference_models.py  repository.py  scheduler.py  services.py  strategy_manager.py  strategy_models.py  tenant_manager.py
apps/cloud-control/: Dockerfile  pom.xml
apps/web-console/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
configs/examples/: monitor-rules.default.yaml  system-config.default.yaml
contracts/asyncapi/: asyncapi.yaml
contracts/capabilities/: capability-manifest.json
contracts/mcp/: tool-schema.json
contracts/openapi/: openapi.yaml
contracts/protobuf/: edge_health.proto
contracts/skills/: skill-definition.json
deploy/compose/: compose.yml
deploy/kubernetes/: README.md  cloud-control.yaml  configmap.yaml  minio.yaml  namespace.yaml  nats.yaml  postgres.yaml  secret.yaml.example  web-console.yaml
deploy/observability/: grafana-alert-rules.yaml  grafana-datasources.yaml  loki-config.yaml  vector.yaml  vmagent.yml
docs/: AI开发约束与平台公共能力规范 V1.0.md  opengeobot-v1.md  平台功能与数据状态统一实施蓝图 V1.0.md
docs/adr/: ADR-0001-统一技术基线与前端主栈.md
docs/implementation/: README.md  design-coverage-audit.md  go-live-runbook.md  mvp-acceptance-checklist.md  performance-test-plan.md  phase0-baseline.md  phase1-foundation.md  phase2-api-contract.yaml  phase2-core-run.md  phase3-insight-bot.md  phase4-verify-monitor.md  phase5-go-live.md  platform-feature-manifest.schema.json  platform-feature-manifest.yaml  security-compliance-checklist.md  traceability-matrix.md  verification-report.template.md
docs/runbooks/: hil-lab-procedure.md  m0-engineering-base.md  m1-platform-capabilities.md  m2-single-robot-simulation.md  m3-m6-remaining-features.md  rosclaw-sandbox-sim.md
docs/test-plans/: c01-c22-test-plan.md  c23-c24-test-plan.md  m2-sim-vertical-loop.md
edge/gateway/: Dockerfile  pyproject.toml
edge/local-skill-executor/: Dockerfile  pyproject.toml
edge/local-skill-executor/src/opengeobot_skill_executor/: __init__.py  adapter_client.py  config.py  executor.py  main.py  nats_client.py
edge/local-skill-executor/tests/: __init__.py  test_adapter_client.py  test_executor.py  test_jetstream.py
edge/safety-gateway/: Dockerfile  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
i18n/: README.md  en-US.json  zh-CN.json
implementation/: opengeobot-v1-execution.md
observability/: log-field-spec.md
reports/acceptance/: C01-result.md  C02-result.md  C03-result.md  C04-result.md  C05-result.md  C06-result.md  C07-result.md  C08-result.md  C09-result.md  C10-result.md  C11-result.md  C12-result.md  C13-result.md  C14-result.md  C15-result.md  C16-adapter-contract-note.md  C16-result.md  C17-result.md  C18-result.md  C19-result.md  C20-result.md  C23-result.md  C24-result.md  README.md  rosclaw-sandbox-sim-result.md
reports/deployment/: F-ADAPTER-001-deployment-summary.md  F-ADAPTER-002-deployment-summary.md  F-ALARM-001-deployment-summary.md  F-DEPLOY-001-deployment-summary.md  F-EDGE-001-deployment-summary.md  F-EDGE-002-deployment-summary.md  F-ENGINEERING-001-deployment-summary.md  F-FLEET-001-deployment-summary.md  F-MAP-001-deployment-summary.md  F-MCP-001-deployment-summary.md  F-MEDIA-001-deployment-summary.md  F-MEMORY-001-deployment-summary.md  F-MISSION-001-deployment-summary.md  (+16 more)
schemas/: data-dictionary.template.json  insight-playbook.template.json  strategy-memory.template.json
scripts/: api_smoke.ps1  dev.ps1  dev.sh  docker_simple.py  docker_smoke.py  mvp_smoke.py  requirements.txt  validate_platform_manifest.py
services/agent-runtime/: Dockerfile  pyproject.toml
services/agent-runtime/src/opengeobot_agent/: __init__.py  config.py  handler.py  initializer.py  main.py  nats_client.py  persona.py  provider.py
services/agent-runtime/tests/: __init__.py  test_handler.py  test_initializer.py  test_jetstream.py  test_main.py  test_provider.py
services/mcp-tool-gateway/: Dockerfile  pyproject.toml
services/mcp-tool-gateway/src/opengeobot_mcp_gateway/: __init__.py  config.py  handler.py  http_server.py  main.py  nats_client.py  registry.py  router.py
services/mcp-tool-gateway/tests/: __init__.py  test_handler.py  test_jetstream.py  test_registry.py  test_router.py  test_schema_validation.py
services/ros1-adapter/: Dockerfile  pyproject.toml
services/ros1-adapter/src/opengeobot_ros1/: __init__.py  adapter.py  config.py  custom_adapter.py  main.py  ros1_native_adapter.py  unitree_adapter.py
services/ros1-adapter/tests/: __init__.py  test_adapter.py  test_config.py  test_custom_adapter.py  test_jetstream.py  test_main.py  test_ros1_e2e.py  test_ros1_native_adapter.py  test_unitree_adapter.py
services/ros2-adapter/: Dockerfile  README.md  pyproject.toml
services/ros2-adapter/src/opengeobot_ros2/: __init__.py  adapter.py  config.py  main.py
services/ros2-adapter/src/opengeobot_ros2/skills/: __init__.py  base.py  capture_image.py  emergency_stop.py  move_forward.py  stand_up.py  stop.py
services/ros2-adapter/tests/: test_adapter.py  test_config.py  test_jetstream.py  test_ros2_e2e.py  test_skills.py
services/rosclaw-bridge/: Dockerfile  entrypoint.sh  pyproject.toml
services/rosclaw-bridge/src/opengeobot_rosclaw_bridge/: __init__.py  bridge.py  config.py  main.py  nats_client.py
services/rosclaw-bridge/tests/: test_bridge.py
static/: index.html
tests/: test_config_sanitization.py
(+1010 files in other folders)
