# Function: Agent runtime project configuration (uv, Python 3.12)
# Time: 2026-07-03
# Author: AxeXie
[project]
name = "agent-runtime"
version = "0.1.0"
description = "OpenGeoBot Agent Runtime — QwenPaw adapter, MCP tools, robot/simulation adapters"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
    # Pinned runtime dependencies will be added as features land
]

[dependency-groups]
dev = [
    "ruff==0.6.9",
    "mypy==1.13.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"
