# Function: MCP tool gateway project configuration (uv, Python 3.12)
# Time: 2026-07-06
# Author: AxeXie
[project]
name = "opengeobot-mcp-gateway"
version = "0.1.0"
description = "OpenGeoBot MCP Tool Gateway — tool registry, canary/stable routing, and invocation handling"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi>=0.110.0",
    "nats-py==2.9.0",
    "pydantic==2.9.2",
    "loguru==0.7.2",
    "uvicorn>=0.23.0",
    "jsonschema==4.23.0",
]

[dependency-groups]
dev = [
    "ruff==0.6.9",
    "mypy==1.13.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opengeobot_mcp_gateway"]
