# Function: ROS2 adapter package metadata (lab scaffold)
# Time: 2026-07-10
# Author: AxeXie

[project]
name = "opengeobot-ros2-adapter"
version = "0.1.0"
description = "OpenGeoBot ROS2 Jazzy adapter scaffold (Phase 7 lab) — not default runtime"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
ros = [
  # Install only on ROS 2 Jazzy hosts; do not pull in CI without HIL lab image.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opengeobot_ros2"]
